# Quoridoraner

./: .gitignore  .travis.yml  Barrier.h  Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  Move.h  Player.cpp  Player.h  README.md  evaluation.h  minimal.cpp  play.h  quoridoraner.cpp
